--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -12,3 +12,6 @@ zull.routes.worker.path=/hr-worker/**
 
 zuul.routes.payrool.service-id=hr-payrool
 zull.routes.payrool.path=/hr-payrool/**
+
+zuul.routes.user.service-id=hr-user
+zull.routes.user.path=/hr-user/**
