--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -8,13 +8,14 @@ ribbon.ConnectTimeout=10000
 ribbon.ReadTimeout=20000
 
 zuul.routes.worker.service-id=hr-worker
-zull.routes.worker.path=/hr-worker/**
+zuul.routes.worker.path=/hr-worker/**
 
 zuul.routes.payrool.service-id=hr-payrool
-zull.routes.payrool.path=/hr-payrool/**
+zuul.routes.payrool.path=/hr-payrool/**
 
 zuul.routes.user.service-id=hr-user
-zull.routes.user.path=/hr-user/**
+zuul.routes.user.path=/hr-user/**
 
 zuul.routes.oauth.service-id=hr-oauth
-zull.routes.oauth.path=/hr-oauth/**
+zuul.routes.oauth.path=/hr-oauth/**
+zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
